2007-01-18  Jean-Christophe Baillie  <baillie@gostai.com>

	USensor was really too cryptic, now use UOwned which is much loser to
	the real meaning of what happens.

	add UOwned macro, preserve backward compat with USensor 
	* src/liburbi/uobject/urbi/uobject.hh.template: add UOwned.

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals. 

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals. 

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	update build-aux externals. 

2007-01-16  Jean-Christophe Baillie  <baillie@gostai.com>

	r365 has been moved to branches/unstable.

	revert to r364. 
	* src/examples/urbiballtrackinghead.cc: done.
	* src/examples/urbibandwidth.cc: done.
	* src/examples/urbiimage.cc: done.
	* src/examples/urbimirror.cc: done.
	* src/examples/urbirecord.cc: done.
	* src/liburbi/uabstractclient.cc: done.
	* src/liburbi/uobject.cc: done.
	* src/liburbi/uobject/urbi/uobject.hh.template: done.
	* src/liburbi/uobject/urbi/uvalue.hh: done.
	* src/liburbi/uobject/uvalue-common.cc: done.
	* src/liburbi/usyncclient.cc: done.
	* src/liburbi/uvar.cc: done.

2007-01-14  Akim Demaille  <akim.demaille@free.fr>

	UValue::Type
	* src/liburbi/uobject/urbi/uvalue.hh (UDataType): Rename as...
	(UValue::Type): this.
	Adjust all uses.
	* src/liburbi/uobject/uvalue-common.cc: Use C++ ctor style.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	fix more errors in API reverting. 
	* src/examples/urbiballtrackinghead.cc: done.
	* src/examples/urbiimage.cc: done.

2007-01-14  Jean-Christophe Baillie  <baillie@gostai.com>

	The UObject API, however bad looking or problematic it looks should
	not be modified in the short term to avoid backward incompatibilities
	that we cannot handle right now. Future rewritting with a fresh and
	new (non conflicting) API will come in the future, until then we fix
	what is existing or provide backward compatible alternatives.
